Add files for sharing

--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<!DOCTYPE html><html><head><title>My Site</title></head><body><h1>Hello from GitHub Pages!</h1></body></html>
+<!DOCTYPE html><html><head><title>My Site</title></head><body>
+
+<h1>Hello from GitHub Pages!</h1>
+<a href="Geotechnical_Engineering.pdf" download>Download PDF file</a>
+
+</body></html>
