--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
   <ul class="file-list" id="fileList">
     <li data-type=".pdf"><a href="Geotechnical_Engineering.pdf" download>Geotechnical Engineering.pdf</a></li>
-    <li data-type=".pdf"><a href="RK_BANSAL.pdf" download>RK_BANSAL</a></li>
+    <li data-type=".pdf"><a href="RK_BANSAL.pdf" download>RK_BANSAL.pdf</a></li>
     <li data-type=".doc"><a href="Project_Proposal.doc" download>Project Proposal.doc</a></li>
     <li data-type=".png"><a href="site_map.png" download>Site Map.png</a></li>
     <li data-type=".jpeg"><a href="profile_pic.jpeg" download>Profile Pic.jpeg</a></li>
@@ -125,7 +125,7 @@
 </main>
 
 <footer>
-  <img class="qr-code" src="donation_qr.png" alt="Donation QR Code" />
+  <img class="qr-code" src="Pay_QR.jpg" alt="Donation QR Code" />
   <p>If you find this site useful, please consider donating to keep providing content.</p>
 </footer>
 
