Add updated index.html

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 <header>
   <h1>Ayush Kushwaha</h1>
-  <p>Software Developer & Tech Enthusiast</p>
+  <p>A Helping Site For File Sharing and Downloads</p>
 </header>
 
 <main>
