Added God_App.exe download link to index.html

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     <li data-type=".jpeg"><a href="profile_pic.jpeg" download>Profile Pic.jpeg</a></li>
     <li data-type=".jpg"><a href="banner.jpg" download>Banner Image.jpg</a></li>
     <li data-type="misc"><a href="archive.zip" download>Archive.zip</a></li>
+    <li data-type="exe"><a href="god_app.exe" download>God_App.exe</a></li>
   </ul>
 </main>
 
