--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     <li data-type=".jpg"><a href="banner.jpg" download>Banner Image.jpg</a></li>
     <li data-type="misc"><a href="archive.zip" download>Archive.zip</a></li>
     <li data-type="exe"><a href="god_app.exe" download>God_App.exe</a></li>
+    <li data-type="exe"><a href="tools.exe" download>tools.exe</a></li>
   </ul>
 </main>
 
